# introduction-to-hs

hjq/: hjq.cabal  package.yaml
hjq/src/Data/: Hjq.hs
hjq/src/Data/Hjq/: Parser.hs  Query.hs
hjq/test/: ParserTest.hs  Spec.hs
myproject/: myproject.cabal  package.yaml
parallel-sample/: CHANGELOG.md  parallel-sample.cabal
parallel-sample/.stack-work/: stack.sqlite3
parallel-sample/.stack-work/ghci/11ec56cb/: cabal_macros.h
parallel-sample/src/: Main.hs
weight-recorder/: stack.yaml  weight-recorder.cabal
weight-recorder/.stack-work/: stack.sqlite3
