cabal-version:       2.2

name:                parallel-sample
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/parallel-sample#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable single-processor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , monad-par

executable multi-processors
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                        , monad-par
  ghc-options:         -threaded "-with-rtsopts=-N4"
